# IO-Benchmark

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  econ_cli.py  environment.yml  pyproject.toml  requirements.txt
__MACOSX/: ._problem_type_analysis
__MACOSX/problem_type_analysis/: ._README.md  ._category_accuracy_by_family_2perrow.py  ._figures  ._problem_type_label.csv  (+1 more)
build_steps/: __init__.py  common.py  llm_ops.py  pipeline_runner.py  step1_reference.py  step2_split.py  step3_symbol_sync.py  step3_symbol_sync_only.py  step3_transform.py  step4_finalize.py  step5_rebalance_judge.py
commands/: __init__.py  analyze_context_length.py  analyze_conversion_quality.py  analyze_model_wrong_keywords.py  apply_balanced.py  build_hf_dataset.py  build_post_step5_confirmed_dataset.py  build_rerun_question_ids.py  build_token_limit_rerun_question_ids.py  check_stage3_sympy_parse.py  clone_artifact_run.py  compare_eval_errors.py  evaluate_generations.py  evaluate_llm_generations.py  export_rule_errors.py  extract_pipeline_json.py  generate_boxed_answers.py  generate_vllm_batch.py  prune_artifacts_to_dataset.py  reconvert_generations.py  show_dataset_examples.py
core/: __init__.py  annotation_overrides.py  cost_logging.py  expert_sampled_questions.py  file_naming.py  llm_utils.py  model_layout.py  path_overrides.py  prompts.py  question_filter.py  result_metadata.py  solver_variants.py  symbol_contract.py  sympy_format.py
problem_type_analysis/: README.md  category_accuracy_by_family_2perrow.py  category_accuracy_max_capability_family.py  problem_type_label.csv
(+13 files in other folders)
